[gd_scene load_steps=2 format=3 uid="uid://clyt17n8mp0sb"]

[ext_resource type="Script" path="res://menu.gd" id="1_6d3o8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6d3o8")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -172.5
offset_right = 118.0
offset_bottom = 172.5
grow_horizontal = 2
grow_vertical = 2

[node name="EmailLabel" type="Label" parent="Container"]
layout_mode = 2
text = "E-mail"

[node name="EmailTextEdit" type="TextEdit" parent="Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
text = "eranot@eranot.com.br"

[node name="PasswordLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Senha"

[node name="PasswordTextEdit" type="TextEdit" parent="Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
text = "12345678"

[node name="HSeparator" type="HSeparator" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="LoginButton" type="Button" parent="Container"]
layout_mode = 2
text = "Entrar
"

[node name="HSeparator2" type="HSeparator" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="CreateAccountButton" type="Button" parent="Container"]
layout_mode = 2
text = "Criar conta"

[connection signal="pressed" from="Container/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="Container/CreateAccountButton" to="." method="_on_create_account_button_pressed"]
